bin/testsuite/tests/compiler/src/errors/compiler4906.swg
#global testerror "Err0423"
#global testerror

func toto(){}